# dct

./: .gitignore  README.md  config.yaml  dct.spec  install.bat  install.sh  pyproject.toml  requirements.txt  run.py
.github/workflows/: draft_release.yml  pre_release.yml  stable_release.yml
dct/: base64.py  config.py  console.py  core.py  discord.py  download.py  hash.py  image.py  json.py  logging.py  paths.py  semaphore.py
